--- a/templates/map.html
+++ b/templates/map.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-<script src="/map_js?points={{dots}}"></script>
+<script src="http://www.brodim.ru/map_js?points={{dots}}"></script>
 <div id="map"></div>
 </body>
 
